--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
   ],
   "require": {
     "php": ">=7.2",
+    "ext-json": "*",
     "illuminate/support": "^6.0|^7.0|^8.0",
     "spatie/laravel-enum": "^2.5",
     "symfony/css-selector": "^5.3",
-    "symfony/dom-crawler": "^5.3"
+    "symfony/dom-crawler": "^5.3",
+    "intervention/image": "^2.6"
   },
   "require-dev": {
     "orchestra/testbench": "^4.0|^5.0|^6.0",
